--- a/ww_generator.html
+++ b/ww_generator.html
@@ -17,7 +17,7 @@ button { margin: 5px; }
 
 <h2>BIP39 Deterministic Poster Generator</h2>
 
-<label>Wall ID: <input type="text" id="nameInput" placeholder="WW05"></label><br>
+<label>Wall ID: <input type="text" id="nameInput" placeholder="WW05" maxlength="4"></label><br>
 <button onclick="generateSeed()">Generate Seed</button>
 
 <div id="seedDisplay"></div>
