--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     padding: 15px 30px;
     border-radius: 8px;
     transition: background 0.3s;
+    margin: 10px 0;
   }
 
   a.button:hover {
@@ -74,7 +75,8 @@ If you do not understand these risks, do not proceed.
   </p>
 
   <!-- Button to WW_GENERATOR page -->
-  <a class="button" href="ww_generator.html">Go to WW_GENERATOR</a>
+  <a class="button" href="ww_generator.html">Go to WW Generator</a>
+  <a class="button" href="ww_sheets.html">Go to WW Sheets</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
