--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-bottom: 80px; /* space for footer */
   }
 
   h1 {
