--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-bottom: 80px; /* space for footer */
   }
 
   h1 {
@@ -47,7 +46,7 @@
     padding: 15px 30px;
     border-radius: 8px;
     transition: background 0.3s;
-    margin: 10px 0;
+    margin: 10px 0; /* space between buttons */
   }
 
   a.button:hover {
@@ -55,10 +54,9 @@
   }
 
   footer {
-    position: absolute;
-    bottom: 20px;
     font-size: 0.9em;
     color: #6c757d;
+    margin-top: 40px; /* space between buttons and footer */
   }
 </style>
 </head>
@@ -75,9 +73,9 @@ BYOB is provided “as is,” without warranties of any kind. By proceeding, you
 If you do not understand these risks, do not proceed.
   </p>
 
-  <!-- Button to WW_GENERATOR page -->
-  <a class="button" href="ww_generator.html">Go to WW Generator</a>
-  <a class="button" href="ww_sheets.html">Go to WW Sheets</a>
+  <!-- Buttons -->
+  <a class="button" href="ww_generator.html">Go to WW_GENERATOR</a>
+  <a class="button" href="ww_sheets.html">Go to WW_Sheets</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
@@ -85,3 +83,6 @@ If you do not understand these risks, do not proceed.
 
 </body>
 </html>
+
+
+
