--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -13,7 +13,10 @@
   }
   h1 {
     text-align: center;
-    margin-bottom: 10px;
+    font-size: 3em;
+    margin-bottom: 0.2em;
+    color: #0d6efd;
+    
   }
   .info {
     text-align: center;
