--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -20,11 +20,13 @@
   }
   .info {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 0.2em;
+  
   }
   .info label {
     font-weight: bold;
-    margin-right: 10px;
+    margin-bottom: 0.2em;
+  
   }
   .sheet-container {
     display: flex;
