--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -20,12 +20,12 @@
   }
   .info {
     text-align: center;
-    margin-bottom: 0.2em;
+    margin-bottom: 40px;
   
   }
   .info label {
     font-weight: bold;
-    margin-bottom: 0.2em;
+    margin-bottom: 40px;
   
   }
   .sheet-container {
