--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -47,11 +47,15 @@
 <h1>WORDWALL</h1>
 
 <div class="info">
-  <div><label>ID:</label> <span id="wallID">WW05</span></div>
-  <div><label>Location:</label> <span id="location">Unknown</span></div>
+  <div><label>ID:</label> <span id="wallID">WW01</span></div>
+  <div><label>Location:</label> <span id="location">Bosa (OR) ITA</span></div>
 </div>
 
 <div class="sheet-container">
+
+
+
+  
   <img src="Sheet1.png" alt="Sheet 1">
   <img src="Sheet2.png" alt="Sheet 2">
   <img src="Sheet3.png" alt="Sheet 3">
