--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -56,7 +56,7 @@
 
 
   
-  <img src="Sheet1.png" alt="Sheet 1">
+  <img src="become-your-own-bank_08_02_2026__WW01__Sheet1.png" alt="Sheet 1">
   <img src="Sheet2.png" alt="Sheet 2">
   <img src="Sheet3.png" alt="Sheet 3">
   <img src="Sheet4.png" alt="Sheet 4">
@@ -65,3 +65,12 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
