--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -19,6 +19,7 @@
     
   }
   .info {
+    font-size: 1.6em;
     text-align: center;
     margin-bottom: 40px;
   
@@ -26,9 +27,16 @@
   .info label {
     font-weight: bold;
     margin-bottom: 40px;
+  }
+  .info span {
+    display: inline-block;
+    margin: 0 20px; /* space between ID and Location */
+     }
   
   }
   .sheet-container {
+    flex-direction: column; /* vertical layout */
+    gap: 40px; /* space between images */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
