--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -81,7 +81,7 @@
   <h1>WORDWALL</h1>
 
   <div class="info">
-    <span>ID: WW05</span><span>Location: London</span>
+    <span>ID: WW05</span><span>Location: Bosa ITA</span>
   </div>
 
 
