--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -95,7 +95,7 @@
   </div>
   
   <!-- Buttons -->
-  <a class="button" href="ww_generator.html">Go to WW_GENERATOR</a>
+  <a class="button" href="ww_generator.html">Go to GENERATOR</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
