--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ If you do not understand these risks, do not proceed.
   </p>
 
   <!-- Buttons -->
-  <a class="button" href="ww_generator.html">Go to WW_GENERATOR</a>
-  <a class="button" href="ww_sheets.html">Go to WW_Sheets</a>
+  <a class="button" href="ww_generator.html">GENERATOR</a>
+  <a class="button" href="ww_sheets.html">Go to SHEETS</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
