--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ If you do not understand these risks, do not proceed.
 
   <!-- Buttons -->
   <a class="button" href="ww_generator.html">GENERATOR</a>
-  <a class="button" href="ww_sheets.html">Go to SHEETS</a>
+  <a class="button" href="ww_sheets.html">SHEETS</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
