--- a/ww_generator.html
+++ b/ww_generator.html
@@ -15,7 +15,7 @@ button { margin: 5px; }
 </head>
 <body>
 
-<h2>BIP39 Deterministic Poster Generator</h2>
+<h2>BIP39 WORDWALL Poster Generator</h2>
 
 <label>Wall ID: <input type="text" id="nameInput" placeholder="WW05" maxlength="4"></label><br>
 <button onclick="generateSeed()">Generate Seed</button>
