--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -78,7 +78,7 @@
 </head>
 <body>
 
-  <h1>WORDWALL</h1>
+  <h1>WORDWALL Poster Archive</h1>
 
   <div class="info">
     <span>ID: WW01</span><span>Location: Bosa ITA</span>
@@ -95,7 +95,7 @@
   </div>
   
   <!-- Buttons -->
-  <a class="button" href="ww_generator.html">Go to GENERATOR</a>
+  <a class="button" href="ww_generator.html">GENERATOR</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
