--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ If you do not understand these risks, do not proceed.
   <!-- Buttons -->
   <a class="button" href="ww_generator.html">GENERATOR</a>
   <a class="button" href="ww_sheets.html">POSTER</a>
+  <a class="button" href="guidebook.html">GUIDEBOOK</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
