--- a/guide.html
+++ b/guide.html
@@ -75,8 +75,7 @@
 <h1>BYOB Guidebook</h1>
 
 <div class="top-buttons">
-  <a href="index.html">Back to Home</a>
-  <a href="ww_generator.html">Go to WW_GENERATOR</a>
+  <a href="index.html">Home</a>
 </div>
 
 <div id="guidebook">Loading guidebook...</div>
