--- a/ww_sheets.html
+++ b/ww_sheets.html
@@ -81,21 +81,19 @@
   <h1>WORDWALL Poster Archive</h1>
 
   <div class="info">
-    <span>ID: WW01</span><span>Location: Bosa ITA</span>
+    <span>Community: BOSA</span><span>Location: Bosa ITA</span>
   </div>
 
 
   <!-- Sheets images -->
   <div class="sheet-container">
-    <img src="become-your-own-bank_08_02_2026__WW01__Sheet1.png" alt="Sheet 1">
-    <img src="become-your-own-bank_08_02_2026__WW01__Sheet2.png" alt="Sheet 2">
-    <img src="become-your-own-bank_08_02_2026__WW01__Sheet3.png" alt="Sheet 3">
-    <img src="become-your-own-bank_08_02_2026__WW01__Sheet4.png" alt="Sheet 4">
-    <img src="become-your-own-bank_08_02_2026__WW01__Sheet5.png" alt="Sheet 5">
+    <img src="Sheet1_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 1">
+    <img src="Sheet2_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 2">
+    <img src="Sheet3_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 3">
+    <img src="Sheet4_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 4">
+    <img src="Sheet5_BYOB_ZERO_WORDWALL_BOSA_V1.png" alt="Sheet 5">
   </div>
   
-  <!-- Buttons -->
-  <a class="button" href="ww_generator.html">GENERATOR</a>
 
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
