--- a/ww_generator.html
+++ b/ww_generator.html
@@ -14,7 +14,7 @@ button { margin: 5px; }
 
 <h2>BYOB Word Wall Generator V1</h2>
 
-<label>Community Label: <input type="text" id="labelInput" placeholder="BOSA" maxlength="4"></label><br>
+<label>Community: <input type="text" id="labelInput" placeholder="BOSA" maxlength="4"></label><br>
 <button onclick="generateWall()">Generate Word Wall</button>
 
 <div id="seedDisplay"></div>
