--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ If you do not understand these risks, do not proceed.
   <a class="button" href="ww_generator.html">GENERATOR</a>
   <a class="button" href="ww_sheets.html">POSTER</a>
   <a class="button" href="guide.html">GUIDEBOOK</a>
-
+  <a class="button" href="btc_viewer.html">VIEWER</a>
   <footer>
     &copy; 2026 BYOB Project. All rights reserved.
   </footer>
