--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ If you do not understand these risks, do not proceed.
   <a class="button" href="guide.html">GUIDEBOOK</a>
   <a class="button" href="btc_viewer.html">VIEWER</a>
   <a class="button" href="btc_capture.html">CAPTURE</a>
+  <a class="button" href="ledger.html">LEDGER</a>
 
   
   <footer>
