--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@ If you do not understand these risks, do not proceed.
 
   <!-- Buttons -->
   <a class="button" href="guide.html">GUIDEBOOK</a>
-  <a class="button" href="ww_generator.html">GENERATOR</a>
+  <a class="button" href="ww_generator.html">WW GENERATOR</a>
   <a class="button" href="ww_sheets.html">POSTER</a>
   <a class="button" href="btc_viewer.html">VIEWER</a>
   <a class="button" href="btc_capture.html">CAPTURE</a>
   <a class="button" href="ledger.html">LEDGER</a>
+  <a class="button" href="qr_translator.html">QR TRANSLATOR</a>
 
   
   <footer>
