--- a/ww_generator.html
+++ b/ww_generator.html
@@ -3,195 +3,260 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BYOB Word Wall Generator V1</title>
+<title>BYOB WW_GENERATOR</title>
 <style>
-body { font-family: sans-serif; padding: 20px; }
+body {
+  font-family: sans-serif;
+  padding: 20px;
+}
 input { margin-bottom: 10px; }
 button { margin: 5px; }
 </style>
 </head>
 <body>
 
-<h2>BYOB Word Wall Generator V1</h2>
+<h2>BIP39 WORDWALL Poster Generator</h2>
 
-<label>Community: <input type="text" id="labelInput" placeholder="BOSA" maxlength="4"></label><br>
-<button onclick="generateWall()">Generate Word Wall</button>
+<label>Community Label (4 chars): 
+<input type="text" id="nameInput" placeholder="BOSA" maxlength="4">
+</label><br>
+
+<button onclick="generateSeed()">Generate Canonical Wall</button>
 
 <div id="seedDisplay"></div>
-<button id="downloadButton" onclick="downloadPosters()" style="display:none;">Download 5 Sheet Posters</button>
+<button id="copyButton" onclick="copySeed()" style="display:none;">Copy Seed</button>
+<button id="downloadButton" onclick="downloadPosters()" style="display:none;">
+Download Posters + Canonical JSON
+</button>
 
-<script src="bip39_words.js"></script> <!-- Must be exact frozen 2048 English words -->
+<script src="bip39_words.js"></script>
 
 <script>
+
 const rowLetters = ["A","B","C","D","E","F","G","J","K","L","M","N","O","P","R","S","T","V","X","Y","Z"];
-const sheets = 5;
-const totalRows = 21;
-const sheetCols = 20;
-let canonicalSeed = "";
+let currentSeed = "";
+
+// ---------------- SEED ----------------
+
+function generateSeed() {
+  const name = document.getElementById("nameInput").value.toUpperCase() || "BOSA";
+  currentSeed = `BYOB_CANONICAL_${name}`;
+
+  document.getElementById("seedDisplay").textContent = "Canonical Seed: " + currentSeed;
+  document.getElementById("copyButton").style.display = "inline";
+  document.getElementById("downloadButton").style.display = "inline";
+}
+
+function copySeed() {
+  navigator.clipboard.writeText(currentSeed);
+  alert("Seed copied.");
+}
+
+// ---------------- HASH + RNG ----------------
 
 async function hashSeed(seed) {
-    const encoder = new TextEncoder();
-    const data = encoder.encode(seed);
-    const hashBuffer = await crypto.subtle.digest("SHA-256", data);
-    return new Uint32Array(hashBuffer);
+  const encoder = new TextEncoder();
+  const data = encoder.encode(seed);
+  const hashBuffer = await crypto.subtle.digest("SHA-256", data);
+  return new Uint32Array(hashBuffer);
 }
 
 function mulberry32(a) {
-    return function() {
-        let t = a += 0x6D2B79F5;
-        t = Math.imul(t ^ t >>> 15, t | 1);
-        t ^= t + Math.imul(t ^ t >>> 7, t | 61);
-        return ((t ^ t >>> 14) >>> 0) / 4294967296;
-    }
+  return function() {
+    let t = a += 0x6D2B79F5;
+    t = Math.imul(t ^ t >>> 15, t | 1);
+    t ^= t + Math.imul(t ^ t >>> 7, t | 61);
+    return ((t ^ t >>> 14) >>> 0) / 4294967296;
+  }
 }
 
 function shuffle(array, rng) {
-    for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(rng() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
-    }
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(rng() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
 }
 
-function isCellAllowed(globalCol, row, sheetIndex) {
-    if (row === totalRows - 1 && globalCol === (sheetIndex + 1) * sheetCols) return false;
-    if (sheetIndex === 4) {
-        if (globalCol === 100 || globalCol === 99) return false;
-        if (globalCol === 98 && row >= totalRows - 6) return false;
-    }
-    return true;
+// ---------------- EXPORT JSON ----------------
+
+function downloadCanonicalJSON(mapping, community, seedHashHex) {
+  const exportData = {
+    meta: {
+      community: community,
+      seed_hash: seedHashHex,
+      version: "1"
+    },
+    mapping: mapping
+  };
+
+  const blob = new Blob(
+    [JSON.stringify(exportData, null, 2)],
+    { type: "application/json" }
+  );
+
+  const link = document.createElement("a");
+  link.href = URL.createObjectURL(blob);
+  link.download = `${community}_canonical_wall.json`;
+  link.click();
 }
 
-async function generateWall() {
-    const label = document.getElementById("labelInput").value || "BYOBZERO";
-    canonicalSeed = `BYOB_ZERO_WORDWALL_${label}_V1`;
-    document.getElementById("seedDisplay").textContent = "Seed: " + canonicalSeed;
-    document.getElementById("downloadButton").style.display = "inline";
-}
+// ---------------- POSTER + JSON ----------------
 
 async function downloadPosters() {
-    if (typeof bip39Words === "undefined" || bip39Words.length !== 2048) {
-        alert("BIP39 word list not loaded correctly!");
-        return;
+
+  if(typeof bip39Words === "undefined" || bip39Words.length !== 2048){
+    alert("BIP39 word list not loaded correctly!");
+    return;
+  }
+
+  const totalRows = 21;
+  const sheetCols = 20;
+  const sheets = 5;
+  const headerColor = "#cccccc";
+  const circledNumbers = ["①","②","③","④","⑤"];
+
+  const dpi = 300;
+  const width_mm = 841, height_mm = 594;
+  const width_px = Math.floor(width_mm / 25.4 * dpi);
+  const height_px = Math.floor(height_mm / 25.4 * dpi);
+
+  const hashArray = await hashSeed(currentSeed);
+  const rng = mulberry32(hashArray[0]);
+  const wordsCopy = bip39Words.slice();
+  shuffle(wordsCopy, rng);
+
+  const wallID = document.getElementById("nameInput").value.toUpperCase() || "BOSA";
+
+  let wordIndex = 0;
+  const canonicalMapping = {};
+
+  function isCellAllowed(globalCol, row, sheetIndex) {
+    if (row === totalRows - 1 && globalCol === (sheetIndex + 1) * sheetCols) {
+      return false;
+    }
+    if (sheetIndex === 4) {
+      if (globalCol === 100) return false;
+      if (globalCol === 99) return false;
+      if (globalCol === 98 && row >= totalRows - 6) return false;
+    }
+    return true;
+  }
+
+  for(let s=0; s<sheets; s++){
+
+    const colStart = s * sheetCols;
+
+    const canvas = document.createElement("canvas");
+    canvas.width = width_px;
+    canvas.height = height_px;
+    const ctx = canvas.getContext("2d");
+
+    ctx.fillStyle = "#ffffff";
+    ctx.fillRect(0,0,canvas.width,canvas.height);
+
+    const totalGridCols = sheetCols + 1;
+    const totalGridRows = totalRows + 1;
+
+    const cellWidth = canvas.width / totalGridCols;
+    const cellHeight = canvas.height / totalGridRows;
+
+    ctx.textAlign = "center";
+    ctx.textBaseline = "middle";
+
+    // Page number
+    ctx.fillStyle = headerColor;
+    ctx.fillRect(0,0,cellWidth,cellHeight);
+    ctx.font = `${Math.floor(cellHeight*0.5)}px sans-serif`;
+    ctx.fillStyle = "#000";
+    ctx.fillText(circledNumbers[s], cellWidth/2, cellHeight/2);
+    ctx.strokeRect(0,0,cellWidth,cellHeight);
+
+    // Column headers
+    for(let c=0;c<sheetCols;c++){
+      const x = cellWidth + c*cellWidth;
+      ctx.fillStyle = headerColor;
+      ctx.fillRect(x,0,cellWidth,cellHeight);
+      const colNumber = String(colStart+c+1).padStart(2,"0");
+      ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
+      ctx.fillStyle = "#000";
+      ctx.fillText(colNumber, x+cellWidth/2, cellHeight/2);
+      ctx.strokeRect(x,0,cellWidth,cellHeight);
     }
 
-    const hashArray = await hashSeed(canonicalSeed);
-    const combinedSeed = hashArray[0] ^ hashArray[1] ^ hashArray[2] ^ hashArray[3];
-    const rng = mulberry32(combinedSeed);
+    for(let r=0;r<totalRows;r++){
 
-    const wordsCopy = bip39Words.slice();
-    shuffle(wordsCopy, rng);
+      const y = cellHeight + r*cellHeight;
 
-    const dpi = 300, width_mm = 841, height_mm = 594;
-    const width_px = Math.floor(width_mm / 25.4 * dpi);
-    const height_px = Math.floor(height_mm / 25.4 * dpi);
-    const circledNumbers = ["①","②","③","④","⑤"];
-    let wordIndex = 0;
+      // Row header
+      ctx.fillStyle = headerColor;
+      ctx.fillRect(0,y,cellWidth,cellHeight);
+      ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
+      ctx.fillStyle = "#000";
+      ctx.fillText(rowLetters[r], cellWidth/2, y+cellHeight/2);
+      ctx.strokeRect(0,y,cellWidth,cellHeight);
 
-    for (let s = 0; s < sheets; s++) {
-        const colStart = s * sheetCols;
-        const canvas = document.createElement("canvas");
-        canvas.width = width_px;
-        canvas.height = height_px;
-        const ctx = canvas.getContext("2d");
+      for(let c=0;c<sheetCols;c++){
 
-        ctx.fillStyle = "#ffffff";
-        ctx.fillRect(0,0,canvas.width,canvas.height);
+        const x = cellWidth + c*cellWidth;
+        const globalCol = colStart + c + 1;
+        const allowed = isCellAllowed(globalCol, r, s);
 
-        const totalGridCols = sheetCols + 1;
-        const totalGridRows = totalRows + 1;
-        const cellWidth = canvas.width / totalGridCols;
-        const cellHeight = canvas.height / totalGridRows;
+        let word = "";
+        let fontSize = Math.floor(cellHeight*0.5);
 
-        ctx.textAlign = "center";
-        ctx.textBaseline = "middle";
+        const isBottomRight =
+          (r === totalRows - 1) &&
+          (globalCol === (s + 1) * sheetCols);
 
-        // Page Number / Header
-        ctx.fillStyle = "#cccccc";
-        ctx.fillRect(0,0,cellWidth,cellHeight);
-        ctx.font = `${Math.floor(cellHeight*0.5)}px sans-serif`;
-        ctx.fillStyle = "#000000";
-        ctx.fillText(circledNumbers[s], cellWidth/2, cellHeight/2);
-        ctx.strokeRect(0,0,cellWidth,cellHeight);
+        ctx.fillStyle = allowed ? "#ffffff" : headerColor;
+        ctx.fillRect(x,y,cellWidth,cellHeight);
 
-        // Column Headers
-        for (let c=0;c<sheetCols;c++) {
-            const x = cellWidth + c*cellWidth;
-            ctx.fillStyle = "#cccccc";
-            ctx.fillRect(x,0,cellWidth,cellHeight);
-            ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
-            ctx.fillStyle = "#000000";
-            ctx.fillText(String(colStart+c+1).padStart(2,"0"), x+cellWidth/2, cellHeight/2);
-            ctx.strokeRect(x,0,cellWidth,cellHeight);
+        if(isBottomRight){
+          ctx.font = `${fontSize}px sans-serif`;
+          ctx.fillStyle = "#000";
+          ctx.fillText(wallID, x+cellWidth/2, y+cellHeight/2);
+        }
+        else if(allowed && wordIndex < wordsCopy.length){
+
+          const fullWord = wordsCopy[wordIndex];
+
+          const sheetNum = String(s+1).padStart(2,"0");
+          const rowNum = String(r+1).padStart(2,"0");
+          const colNum = String(c+1).padStart(2,"0");
+          const coord = sheetNum + rowNum + colNum;
+
+          canonicalMapping[fullWord] = coord;
+
+          word = fullWord.slice(0,4);
+          ctx.font = `${fontSize}px sans-serif`;
+          ctx.fillStyle = "#000";
+          ctx.fillText(word, x+cellWidth/2, y+cellHeight/2);
+
+          wordIndex++;
         }
 
-        // Rows
-        for (let r=0;r<totalRows;r++) {
-            const y = cellHeight + r*cellHeight;
-            // Row header
-            ctx.fillStyle = "#cccccc";
-            ctx.fillRect(0,y,cellWidth,cellHeight);
-            ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
-            ctx.fillStyle = "#000000";
-            ctx.fillText(rowLetters[r], cellWidth/2, y+cellHeight/2);
-            ctx.strokeRect(0,y,cellWidth,cellHeight);
-
-            // Word cells
-            for (let c=0;c<sheetCols;c++) {
-                const x = cellWidth + c*cellWidth;
-                const globalCol = colStart + c + 1;
-                const allowed = isCellAllowed(globalCol, r, s);
-                let word = "";
-                if (allowed && wordIndex < wordsCopy.length) {
-                    word = wordsCopy[wordIndex].slice(0,4);
-                    wordIndex++;
-                }
-                ctx.fillStyle = allowed ? "#ffffff" : "#cccccc";
-                ctx.fillRect(x,y,cellWidth,cellHeight);
-                if (word) {
-                    ctx.font = `${Math.floor(cellHeight * 0.5)}px sans-serif`;
-                    ctx.textAlign = "center"; // Centering the text horizontally
-                    ctx.textBaseline = "middle"; // Centering the text vertically
-                    ctx.fillStyle = "#000000";
-                    ctx.fillText(word, x+cellWidth/2, y+cellHeight/2);
-                }
-                ctx.strokeRect(x,y,cellWidth,cellHeight);
-            }
-
-            
-            // ------------------- Draw bottom-right label -------------------
-            const label = (document.getElementById("labelInput").value || "BYOB").toUpperCase();
-
-            // Calculate the bottom-right cell coordinates
-            const labelCol = sheetCols - 1; // last column of current sheet
-            const labelRow = totalRows - 1; // last row
-
-            const labelCellX = cellWidth + labelCol * cellWidth + cellWidth / 2; // center of last column
-            const labelCellY = cellHeight + labelRow * cellHeight + cellHeight / 2; // center of last row
-
-            ctx.font = `${Math.floor(cellHeight * 0.4)}px sans-serif`; // font scaled to cell
-            ctx.fillStyle = "#000000";
-            ctx.textAlign = "center";
-            ctx.textBaseline = "middle";
-            ctx.fillText(label, labelCellX, labelCellY);
-            
-        }
-
-        // Download PNG
-        canvas.toBlob(function(blob){
-            const link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            const safeName = canonicalSeed.replace(/[^a-zA-Z0-9-_]/g,"_");
-            link.download = `${safeName}_Sheet${s+1}.png`;
-            link.click();
-        }, "image/png");
+        ctx.strokeRect(x,y,cellWidth,cellHeight);
+      }
     }
 
-    alert("Canonical Word Wall generated and downloaded.");
+    canvas.toBlob(function(blob){
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = `${wallID}_Sheet${s+1}.png`;
+      link.click();
+    }, "image/png");
+  }
+
+  const seedHashHex = Array.from(hashArray)
+    .map(x => x.toString(16).padStart(8,"0"))
+    .join("");
+
+  downloadCanonicalJSON(canonicalMapping, wallID, seedHashHex);
 }
-</script>
-</body>
-</html>
 
+</script>
+</body>  
+</html>
 
 
 
